[tool.poetry]
name = "terraform-afonso"
version = "0.1.0"
description = ""
authors = ["brun0meira <brunomeira321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
